@@ -21,7 +21,8 @@
 
 #include <lsp-plug.in/common/debug.h>
 #include <lsp-plug.in/stdlib/stdio.h>
-#include <stdlib.h>
+#include <lsp-plug.in/stdlib/stdlib.h>
+#include <lsp-plug.in/stdlib/string.h>
 #include <unistd.h>
 
 namespace lsp
@@ -155,7 +156,233 @@ namespace lsp
 
             ::fflush(log_fd);
         }
-    }
-}
+
+        //---------------------------------------------------------------------
+        static const char *hex_digits = "0123456789abcdef";
+
+        static inline size_t num_ascii_characters(lsp_utf16_t c)
+        {
+            if (c < 0x80)
+                return 1;
+            return (c < 0x100) ? 4 : 6; // \x12 or \u1234
+        }
+
+        static inline size_t num_ascii_characters(lsp_utf32_t c)
+        {
+            if (c < 0x100)
+                return (c < 0x80) ? 1 : 4; // char or \x12
+
+            size_t nd = 4; // \U12
+            c       >>= 8;
+            if (c & 0xff0000)
+            {
+                c     >>= 16;
+                nd     += 4;
+            }
+            else if (c & 0xff00)
+            {
+                c     >>= 8;
+                nd     += 2;
+            }
+            nd     += (c >= 0x10) ? 2 : 1;
+
+            return nd;
+        }
+
+        static inline char *make_string(const char *src)
+        {
+            return strdup(src);
+        }
+
+        static char *make_string(const lsp_utf16_t *src)
+        {
+            // Estimate the length of the result string
+            size_t n    = 0;
+            for (const lsp_utf16_t *s = src; *s != '\0'; ++s)
+                n          += num_ascii_characters(*s);
+
+            // Allocate the data
+            char *text  = static_cast<char *>(malloc(n + 1));
+            if (text == NULL)
+                return NULL;
+
+            // Perform string encoding
+            char *dst   = text;
+            for (const lsp_utf16_t *s = src; *s != '\0'; ++s)
+            {
+                lsp_utf16_t c = *s;
+                if (c < 0x80)
+                    *(dst++)    = char(c);
+                else if (c < 0x100)
+                {
+                    dst[0]      = '\\';
+                    dst[1]      = 'x';
+                    dst[2]      = hex_digits[(c >> 4) & 0xf];
+                    dst[3]      = hex_digits[c & 0xf];
+                    dst        += 4;
+                }
+                else
+                {
+                    dst[0]      = '\\';
+                    dst[1]      = 'u';
+                    dst[2]      = hex_digits[(c >> 12) & 0xf];
+                    dst[3]      = hex_digits[(c >> 8) & 0xf];
+                    dst[4]      = hex_digits[(c >> 4) & 0xf];
+                    dst[5]      = hex_digits[c & 0xf];
+                    dst        += 6;
+                }
+            }
+
+            // End of string character
+            *dst        = '\0';
+
+            return text;
+        }
+
+        static char *make_string(const lsp_utf32_t *src)
+        {
+            // Estimate the length of the result string
+            size_t n    = 0;
+            for (const lsp_utf32_t *s = src; *s != '\0'; ++s)
+                n          += num_ascii_characters(*s);
+
+            // Allocate the data
+            char *text  = static_cast<char *>(malloc(n + 1));
+            if (text == NULL)
+                return NULL;
+
+            // Perform string encoding
+            char *dst   = text;
+            for (const lsp_utf32_t *s = src; *s != '\0'; ++s)
+            {
+                lsp_utf32_t c = *s;
+                if (c < 0x80)
+                    *(dst++)    = char(c);
+                else if (c < 0x100)
+                {
+                    dst[0]      = '\\';
+                    dst[1]      = 'x';
+                    dst[2]      = hex_digits[(c >> 4) & 0xf];
+                    dst[3]      = hex_digits[c & 0xf];
+                    dst        += 4;
+                }
+                else
+                {
+                    dst[0]      = '\\';
+                    dst[1]      = 'U';
+                    dst        += 2;
+
+                    // Encode the hex digit representing the UTF codepoint
+                    ssize_t sh  = 28;
+                    while (!(c & (0xf << sh)))
+                        sh      -= 4;
+                    while (sh >= 0)
+                    {
+                        *(dst++)    = hex_digits[(c >> sh) & 0xf];
+                        sh         -= 4;
+                    }
+                }
+            }
+
+            // End of string character
+            *dst        = '\0';
+
+            return text;
+        }
+
+        //---------------------------------------------------------------------
+        log_string::log_string(const char *src)
+        {
+            text        = make_string(src);
+        }
+
+        log_string::log_string(const lsp_utf16_t *src)
+        {
+            text        = make_string(src);
+        }
+
+        log_string::log_string(const lsp_utf32_t *src)
+        {
+            text        = make_string(src);
+        }
+
+        log_string::log_string(const log_string & src)
+        {
+            text        = (src.text != NULL) ? strdup(src.text) : NULL;
+        }
+
+        log_string::log_string(const log_string * src)
+        {
+            text        = (src->text != NULL) ? strdup(src->text) : NULL;
+        }
+
+        log_string::log_string(log_string && src)
+        {
+            text        = src.text;
+            src.text    = NULL;
+        }
+
+        log_string::~log_string()
+        {
+            if (text != NULL)
+            {
+                free(text);
+                text        = NULL;
+            }
+        }
+
+        log_string & log_string::operator = (const char *src)
+        {
+            if (text != NULL)
+                free(text);
+            text        = make_string(src);
+            return *this;
+        }
+
+        log_string & log_string::operator = (const lsp_utf16_t *src)
+        {
+            if (text != NULL)
+                free(text);
+            text        = make_string(src);
+            return *this;
+        }
+
+        log_string & log_string::operator = (const lsp_utf32_t *src)
+        {
+            if (text != NULL)
+                free(text);
+            text        = make_string(src);
+            return *this;
+        }
+
+        log_string & log_string::operator = (const log_string & src)
+        {
+            if (text != NULL)
+                free(text);
+            text        = (src.text != NULL) ? strdup(src.text) : NULL;
+            return *this;
+        }
+
+        log_string & log_string::operator = (log_string && src)
+        {
+            if (text != NULL)
+                free(text);
+            text        = src.text;
+            src.text    = NULL;
+            return *this;
+        }
+
+        void log_string::swap(log_string &src)
+        {
+            lsp::swap(text, src.text);
+        }
+
+        void log_string::swap(log_string *src)
+        {
+            lsp::swap(text, src->text);
+        }
+
+    } /* namespace debug */
+} /* namespace lsp */
 
 
